--- a/css/register.css
+++ b/css/register.css
@@ -21,7 +21,9 @@ label {
 
 input[type="text"],
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+input[type="number"],
+input[type="date"]{
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
